Fix product detail box not showing properly in board view page

--- a/src/app/modules/board/board.component.less
+++ b/src/app/modules/board/board.component.less
@@ -1580,7 +1580,7 @@ i.background-msg-arrow {
 
 .static-bottom-panel {
   bottom: 51px;
-  left: 75px;
+  //left: 75px;
   width: 305px;
   border: 1px solid #b76e79;
   background: #ffffff;
